test_suite/alan-2022-examples/failing/004930_mutation.alan
source O5 begin leave y1 and; end
